kubernetes/argocd/applications/elonlist/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elonlist
  labels:
    app: elonlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elonlist
  template:
    metadata:
      labels:
        app: elonlist
    spec:
      containers:
      - name: elonlist
        image: registry.digitalocean.com/kubeden/elonlist:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
