kubernetes/argocd/applications/elonlist/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elonlist-service
spec:
  selector:
    app: elonlist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
