kubernetes/argocd/applications/elonlist/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elonlist-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: elonlist.com
spec:
  tls:
  - hosts:
    - elonlist.com
    secretName: elonlist-tls
  rules:
  - host: elonlist.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elonlist-service
            port: 
              number: 80
